--- a/.github/workflows/check-bioc.yaml
+++ b/.github/workflows/check-bioc.yaml
@@ -29,8 +29,8 @@ jobs:
       matrix:
         config:
           - { os: ubuntu-latest, r: 'release', bioc: '3.13', cont: "bioconductor/bioconductor_docker:RELEASE_3_13", rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest" }
-          - { os: macOS-latest, r: 'release', bioc: '3.13'}
-          - { os: windows-latest, r: 'release', bioc: '3.13'}
+          # - { os: macOS-latest, r: 'release', bioc: '3.13'}
+          # - { os: windows-latest, r: 'release', bioc: '3.13'}
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
@@ -129,7 +129,7 @@ jobs:
 
       - name: Install Tensorflow
         run: |
-          Rscript -e "install.packages("tfprobability")"
+          Rscript -e "install.packages('tfprobability')"
           Rscript -e "tfprobability::install_tfprobability(version=Sys.getenv('TFP_VERSION'), tensorflow=Sys.getenv('TF_VERSION'))"
 
       - name: Install dependencies pass 1
